Fix indentation in fetch_data_from_sql_alchemy function

--- a/review_analysis.ipynb
+++ b/review_analysis.ipynb
@@ -220,8 +220,8 @@
     "def fetch_data_from_sql_alchemy():\n",
     "\n",
     "    driver = \"ODBC Driver 17 for SQL Server\"\n",
-    "    server = \""\n",
-    "    database = \""\n",
+    "    server = \"\n",
+    "    database = \"\n",
     "    \n",
     "    #Link of connecting to the  msql server \n",
     "    connection_string = f\"mssql+pyodbc:///?odbc_connect=Driver={quote_plus(driver)};Server={server};Database={database};Trusted_Connection=yes;\"\n",
